--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,64 @@ main {
   font-size: 0.9rem;
   line-height: 1.5rem;
 }
+
+.container2 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+}
+
+.container2 .box {
+  background-color: var(--accent-blue);
+  color: var(--primary-white);
+  padding: 1rem 5rem;
+  font-size: 0.95rem;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 1.5rem;
+  font-weight: 400;
+}
+
+.box span {
+  font-weight: bold;
+}
+
+.container2 form {
+  display: flex;
+  background-color: var(--primary-white);
+  margin-top: 1.5rem;
+  height: 30rem;
+  padding: 0rem 1.5rem;
+  border-radius: 10px;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+form input {
+  padding: 1.2rem;
+  border: 1px solid #aaaaaa;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+form button {
+  padding: 1.2rem;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: var(--primary-green);
+  color: var(--primary-white);
+  border: none;
+  cursor: pointer;
+  box-shadow: inset 0 -4px var(--neutral-darkgreen);
+  transition: all 0.5s ease;
+}
+
+form button:active {
+  outline: none;
+  box-shadow: none;
+  transform: translateY(3px);
+}
+
+form button:focus {
+  outline: none;
+}
