--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 :root {
   --primary-red: hsl(0, 100%, 74%);
+  --primary-red-shadow: hsla(0, 37%, 54%, 0.603);
   --primary-green: hsl(154, 59%, 51%);
+  --primary-green-shadow: hsl(154, 55%, 45%);
   --accent-blue: hsl(248, 32%, 49%);
+  --accent-blue-shadow: hsl(248, 39%, 35%);
   --neutral-darkblue: hsl(249, 10%, 26%);
   --grayish-blue: hsl(246, 25%, 77%);
   --neutral-darkgreen: hsl(153, 38%, 54%);
   --primary-white: #fafafa;
-  --neutral-gray: #aaaaaa;
+  --neutral-gray: #e0e0e0;
   --primary-black: #222222;
 
   --primary-font: "Poppins", sans-serif;
@@ -58,6 +61,7 @@ main {
   text-align: center;
   line-height: 1.5rem;
   font-weight: 400;
+  box-shadow: 0 5px var(--primary-red-shadow);
 }
 
 .box span {
@@ -73,19 +77,27 @@ main {
   border-radius: 10px;
   flex-direction: column;
   justify-content: space-evenly;
+  caret-color: var(--accent-blue);
+  box-shadow: 0 5px var(--primary-red-shadow);
 }
 
 form input {
   padding: 1.2rem;
-  border: 1px solid var(--neutral-gray);
+  border: 0.5px solid var(--neutral-gray);
+  background-color: var(--primary-white);
   border-radius: 5px;
   font-size: 0.8rem;
   font-weight: bold;
-  color: var(--neutral-darkblue);
+  color: var(--accent-blue);
+  transition: all 0.2s ease;
 }
 
 form input:focus {
   outline-color: var(--accent-blue);
+}
+
+form input:hover {
+  border-color: var(--accent-blue);
 }
 
 form button {
@@ -97,8 +109,13 @@ form button {
   border: none;
   cursor: pointer;
   box-shadow: inset 0 -4px var(--neutral-darkgreen);
-  transition: all 0.3s ease;
+  transition: all 0.2s ease;
   text-transform: uppercase;
+}
+
+form button:hover {
+  background-color: var(--accent-blue);
+  box-shadow: inset 0 -4px var(--accent-blue-shadow);
 }
 
 form button:active {
@@ -122,6 +139,12 @@ small a {
   font-weight: bold;
   color: var(--primary-red);
   text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+small a:hover {
+  color: var(--accent-blue);
+  text-decoration: underline;
 }
 
 footer {
@@ -129,7 +152,7 @@ footer {
   background-color: var(--primary-black);
   color: var(--primary-white);
   margin-bottom: 0;
-  height: 2rem;
+  height: 1.4rem;
   font-size: 0.9rem;
   padding: 1rem 3.5rem;
   display: flex;
@@ -142,8 +165,50 @@ footer a {
   text-decoration: none;
   color: var(--primary-red);
   font-weight: bold;
+  transition: all 1s ease;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 #name {
   color: var(--primary-green);
+}
+
+@media (min-width: 376px) {
+  main {
+    max-width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0 6rem;
+  }
+
+  .container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: unset;
+    max-width: 50%;
+  }
+
+  .container1 h1 {
+    font-size: 3rem;
+    padding-left: 0;
+  }
+
+  .container1 p {
+    max-width: 550px;
+  }
+
+  .container2 {
+    max-width: 50%;
+    max-height: 35rem;
+  }
+
+  .container2 form {
+    padding: 1.3rem 2rem;
+  }
 }
